--- a/SOFT/AtmbDevices/AtmbTestDevices/Form1.resx
+++ b/SOFT/AtmbDevices/AtmbTestDevices/Form1.resx
@@ -151,7 +151,7 @@
     <value>$this</value>
   </data>
   <data name="&gt;&gt;tbToPay.ZOrder" xml:space="preserve">
-    <value>27</value>
+    <value>28</value>
   </data>
   <data name="labelAmountToPay.Anchor" type="System.Windows.Forms.AnchorStyles, System.Windows.Forms">
     <value>Top, Right</value>
@@ -181,7 +181,7 @@
     <value>$this</value>
   </data>
   <data name="&gt;&gt;labelAmountToPay.ZOrder" xml:space="preserve">
-    <value>26</value>
+    <value>27</value>
   </data>
   <data name="buttonExit.Anchor" type="System.Windows.Forms.AnchorStyles, System.Windows.Forms">
     <value>Bottom, Right</value>
@@ -208,7 +208,7 @@
     <value>$this</value>
   </data>
   <data name="&gt;&gt;buttonExit.ZOrder" xml:space="preserve">
-    <value>25</value>
+    <value>26</value>
   </data>
   <metadata name="statusStrip.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>119, 17</value>
@@ -232,7 +232,7 @@
     <value>$this</value>
   </data>
   <data name="&gt;&gt;statusStrip.ZOrder" xml:space="preserve">
-    <value>24</value>
+    <value>25</value>
   </data>
   <data name="stripLabelCom.Size" type="System.Drawing.Size, System.Drawing">
     <value>14, 19</value>
@@ -283,7 +283,7 @@
     <value>$this</value>
   </data>
   <data name="&gt;&gt;labelAmountReceived.ZOrder" xml:space="preserve">
-    <value>22</value>
+    <value>23</value>
   </data>
   <data name="tbReceived.Anchor" type="System.Windows.Forms.AnchorStyles, System.Windows.Forms">
     <value>Top, Right</value>
@@ -316,7 +316,7 @@
     <value>$this</value>
   </data>
   <data name="&gt;&gt;tbReceived.ZOrder" xml:space="preserve">
-    <value>23</value>
+    <value>24</value>
   </data>
   <data name="labelAmountRemaining.Anchor" type="System.Windows.Forms.AnchorStyles, System.Windows.Forms">
     <value>Top, Right</value>
@@ -346,7 +346,7 @@
     <value>$this</value>
   </data>
   <data name="&gt;&gt;labelAmountRemaining.ZOrder" xml:space="preserve">
-    <value>20</value>
+    <value>21</value>
   </data>
   <data name="tbRemaining.Anchor" type="System.Windows.Forms.AnchorStyles, System.Windows.Forms">
     <value>Top, Right</value>
@@ -379,7 +379,7 @@
     <value>$this</value>
   </data>
   <data name="&gt;&gt;tbRemaining.ZOrder" xml:space="preserve">
-    <value>21</value>
+    <value>22</value>
   </data>
   <data name="tbDenomination.Anchor" type="System.Windows.Forms.AnchorStyles, System.Windows.Forms">
     <value>Top, Right</value>
@@ -412,7 +412,7 @@
     <value>$this</value>
   </data>
   <data name="&gt;&gt;tbDenomination.ZOrder" xml:space="preserve">
-    <value>19</value>
+    <value>20</value>
   </data>
   <data name="labelDenomination.Anchor" type="System.Windows.Forms.AnchorStyles, System.Windows.Forms">
     <value>Top, Right</value>
@@ -445,7 +445,7 @@
     <value>$this</value>
   </data>
   <data name="&gt;&gt;labelDenomination.ZOrder" xml:space="preserve">
-    <value>18</value>
+    <value>19</value>
   </data>
   <metadata name="contextMenuStripClear.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>228, 17</value>
@@ -469,7 +469,7 @@
     <value>Top, Right</value>
   </data>
   <data name="buttonHoppers.Location" type="System.Drawing.Point, System.Drawing">
-    <value>1290, 297</value>
+    <value>1290, 325</value>
   </data>
   <data name="buttonHoppers.Size" type="System.Drawing.Size, System.Drawing">
     <value>100, 23</value>
@@ -490,7 +490,7 @@
     <value>$this</value>
   </data>
   <data name="&gt;&gt;buttonHoppers.ZOrder" xml:space="preserve">
-    <value>17</value>
+    <value>18</value>
   </data>
   <data name="buttonCounters.Anchor" type="System.Windows.Forms.AnchorStyles, System.Windows.Forms">
     <value>Top, Right</value>
@@ -499,7 +499,7 @@
     <value>NoControl</value>
   </data>
   <data name="buttonCounters.Location" type="System.Drawing.Point, System.Drawing">
-    <value>1290, 239</value>
+    <value>1290, 267</value>
   </data>
   <data name="buttonCounters.Size" type="System.Drawing.Size, System.Drawing">
     <value>100, 23</value>
@@ -520,7 +520,7 @@
     <value>$this</value>
   </data>
   <data name="&gt;&gt;buttonCounters.ZOrder" xml:space="preserve">
-    <value>16</value>
+    <value>17</value>
   </data>
   <data name="buttonRAZCompteurs.Anchor" type="System.Windows.Forms.AnchorStyles, System.Windows.Forms">
     <value>Top, Right</value>
@@ -529,7 +529,7 @@
     <value>NoControl</value>
   </data>
   <data name="buttonRAZCompteurs.Location" type="System.Drawing.Point, System.Drawing">
-    <value>1290, 268</value>
+    <value>1290, 296</value>
   </data>
   <data name="buttonRAZCompteurs.Size" type="System.Drawing.Size, System.Drawing">
     <value>100, 23</value>
@@ -550,7 +550,7 @@
     <value>$this</value>
   </data>
   <data name="&gt;&gt;buttonRAZCompteurs.ZOrder" xml:space="preserve">
-    <value>15</value>
+    <value>16</value>
   </data>
   <data name="&gt;&gt;dataGridViewCompteurs.Name" xml:space="preserve">
     <value>dataGridViewCompteurs</value>
@@ -610,7 +610,7 @@
     <value>$this</value>
   </data>
   <data name="&gt;&gt;groupBoxPieces.ZOrder" xml:space="preserve">
-    <value>1</value>
+    <value>2</value>
   </data>
   <metadata name="Nom.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>True</value>
@@ -871,7 +871,7 @@
     <value>$this</value>
   </data>
   <data name="&gt;&gt;groupBox1.ZOrder" xml:space="preserve">
-    <value>14</value>
+    <value>15</value>
   </data>
   <data name="textBox1.Location" type="System.Drawing.Point, System.Drawing">
     <value>6, 19</value>
@@ -1093,7 +1093,7 @@
     <value>$this</value>
   </data>
   <data name="&gt;&gt;butttonEndofTransacton.ZOrder" xml:space="preserve">
-    <value>13</value>
+    <value>14</value>
   </data>
   <data name="BtnDispenseBNR.Anchor" type="System.Windows.Forms.AnchorStyles, System.Windows.Forms">
     <value>Top, Right</value>
@@ -1102,7 +1102,7 @@
     <value>NoControl</value>
   </data>
   <data name="BtnDispenseBNR.Location" type="System.Drawing.Point, System.Drawing">
-    <value>1290, 475</value>
+    <value>1290, 503</value>
   </data>
   <data name="BtnDispenseBNR.Size" type="System.Drawing.Size, System.Drawing">
     <value>100, 23</value>
@@ -1123,13 +1123,13 @@
     <value>$this</value>
   </data>
   <data name="&gt;&gt;BtnDispenseBNR.ZOrder" xml:space="preserve">
-    <value>12</value>
+    <value>13</value>
   </data>
   <data name="textBoxBnrDispense.Anchor" type="System.Windows.Forms.AnchorStyles, System.Windows.Forms">
     <value>Top, Right</value>
   </data>
   <data name="textBoxBnrDispense.Location" type="System.Drawing.Point, System.Drawing">
-    <value>1407, 477</value>
+    <value>1407, 505</value>
   </data>
   <data name="textBoxBnrDispense.Size" type="System.Drawing.Size, System.Drawing">
     <value>102, 20</value>
@@ -1153,13 +1153,13 @@
     <value>$this</value>
   </data>
   <data name="&gt;&gt;textBoxBnrDispense.ZOrder" xml:space="preserve">
-    <value>11</value>
+    <value>12</value>
   </data>
   <data name="textBoxLoaderNumberBilet.Anchor" type="System.Windows.Forms.AnchorStyles, System.Windows.Forms">
     <value>Top, Right</value>
   </data>
   <data name="textBoxLoaderNumberBilet.Location" type="System.Drawing.Point, System.Drawing">
-    <value>1407, 516</value>
+    <value>1407, 544</value>
   </data>
   <data name="textBoxLoaderNumberBilet.Size" type="System.Drawing.Size, System.Drawing">
     <value>102, 20</value>
@@ -1183,7 +1183,7 @@
     <value>$this</value>
   </data>
   <data name="&gt;&gt;textBoxLoaderNumberBilet.ZOrder" xml:space="preserve">
-    <value>9</value>
+    <value>10</value>
   </data>
   <data name="buttonLSetMeterLoader.Anchor" type="System.Windows.Forms.AnchorStyles, System.Windows.Forms">
     <value>Top, Right</value>
@@ -1192,7 +1192,7 @@
     <value>NoControl</value>
   </data>
   <data name="buttonLSetMeterLoader.Location" type="System.Drawing.Point, System.Drawing">
-    <value>1290, 507</value>
+    <value>1290, 535</value>
   </data>
   <data name="buttonLSetMeterLoader.Size" type="System.Drawing.Size, System.Drawing">
     <value>100, 37</value>
@@ -1213,13 +1213,13 @@
     <value>$this</value>
   </data>
   <data name="&gt;&gt;buttonLSetMeterLoader.ZOrder" xml:space="preserve">
-    <value>10</value>
+    <value>11</value>
   </data>
   <data name="buttonTrieur.Anchor" type="System.Windows.Forms.AnchorStyles, System.Windows.Forms">
     <value>Top, Right</value>
   </data>
   <data name="buttonTrieur.Location" type="System.Drawing.Point, System.Drawing">
-    <value>1290, 210</value>
+    <value>1290, 238</value>
   </data>
   <data name="buttonTrieur.Size" type="System.Drawing.Size, System.Drawing">
     <value>100, 23</value>
@@ -1240,7 +1240,7 @@
     <value>$this</value>
   </data>
   <data name="&gt;&gt;buttonTrieur.ZOrder" xml:space="preserve">
-    <value>8</value>
+    <value>9</value>
   </data>
   <data name="labelCanal.Anchor" type="System.Windows.Forms.AnchorStyles, System.Windows.Forms">
     <value>Top, Right</value>
@@ -1252,7 +1252,7 @@
     <value>NoControl</value>
   </data>
   <data name="labelCanal.Location" type="System.Drawing.Point, System.Drawing">
-    <value>1409, 192</value>
+    <value>1409, 220</value>
   </data>
   <data name="labelCanal.Size" type="System.Drawing.Size, System.Drawing">
     <value>34, 13</value>
@@ -1273,7 +1273,7 @@
     <value>$this</value>
   </data>
   <data name="&gt;&gt;labelCanal.ZOrder" xml:space="preserve">
-    <value>7</value>
+    <value>8</value>
   </data>
   <data name="labelPath.Anchor" type="System.Windows.Forms.AnchorStyles, System.Windows.Forms">
     <value>Top, Right</value>
@@ -1282,7 +1282,7 @@
     <value>True</value>
   </data>
   <data name="labelPath.Location" type="System.Drawing.Point, System.Drawing">
-    <value>1461, 192</value>
+    <value>1461, 220</value>
   </data>
   <data name="labelPath.Size" type="System.Drawing.Size, System.Drawing">
     <value>42, 13</value>
@@ -1303,13 +1303,13 @@
     <value>$this</value>
   </data>
   <data name="&gt;&gt;labelPath.ZOrder" xml:space="preserve">
-    <value>6</value>
+    <value>7</value>
   </data>
   <data name="numericUpDownCanal.Anchor" type="System.Windows.Forms.AnchorStyles, System.Windows.Forms">
     <value>Top, Right</value>
   </data>
   <data name="numericUpDownCanal.Location" type="System.Drawing.Point, System.Drawing">
-    <value>1406, 211</value>
+    <value>1406, 239</value>
   </data>
   <data name="numericUpDownCanal.Size" type="System.Drawing.Size, System.Drawing">
     <value>50, 20</value>
@@ -1330,13 +1330,13 @@
     <value>$this</value>
   </data>
   <data name="&gt;&gt;numericUpDownCanal.ZOrder" xml:space="preserve">
-    <value>5</value>
+    <value>6</value>
   </data>
   <data name="numericUpDownPath.Anchor" type="System.Windows.Forms.AnchorStyles, System.Windows.Forms">
     <value>Top, Right</value>
   </data>
   <data name="numericUpDownPath.Location" type="System.Drawing.Point, System.Drawing">
-    <value>1462, 211</value>
+    <value>1462, 239</value>
   </data>
   <data name="numericUpDownPath.Size" type="System.Drawing.Size, System.Drawing">
     <value>50, 20</value>
@@ -1357,7 +1357,7 @@
     <value>$this</value>
   </data>
   <data name="&gt;&gt;numericUpDownPath.ZOrder" xml:space="preserve">
-    <value>4</value>
+    <value>5</value>
   </data>
   <data name="buttonRetract.Anchor" type="System.Windows.Forms.AnchorStyles, System.Windows.Forms">
     <value>Top, Right</value>
@@ -1366,7 +1366,7 @@
     <value>NoControl</value>
   </data>
   <data name="buttonRetract.Location" type="System.Drawing.Point, System.Drawing">
-    <value>1290, 417</value>
+    <value>1290, 445</value>
   </data>
   <data name="buttonRetract.Size" type="System.Drawing.Size, System.Drawing">
     <value>100, 23</value>
@@ -1387,7 +1387,7 @@
     <value>$this</value>
   </data>
   <data name="&gt;&gt;buttonRetract.ZOrder" xml:space="preserve">
-    <value>3</value>
+    <value>4</value>
   </data>
   <data name="buttonRollBack.Anchor" type="System.Windows.Forms.AnchorStyles, System.Windows.Forms">
     <value>Top, Right</value>
@@ -1396,7 +1396,7 @@
     <value>NoControl</value>
   </data>
   <data name="buttonRollBack.Location" type="System.Drawing.Point, System.Drawing">
-    <value>1290, 446</value>
+    <value>1290, 474</value>
   </data>
   <data name="buttonRollBack.Size" type="System.Drawing.Size, System.Drawing">
     <value>100, 23</value>
@@ -1417,7 +1417,37 @@
     <value>$this</value>
   </data>
   <data name="&gt;&gt;buttonRollBack.ZOrder" xml:space="preserve">
-    <value>2</value>
+    <value>3</value>
+  </data>
+  <data name="buttonCancel.Anchor" type="System.Windows.Forms.AnchorStyles, System.Windows.Forms">
+    <value>Top, Right</value>
+  </data>
+  <data name="buttonCancel.ImeMode" type="System.Windows.Forms.ImeMode, System.Windows.Forms">
+    <value>NoControl</value>
+  </data>
+  <data name="buttonCancel.Location" type="System.Drawing.Point, System.Drawing">
+    <value>1356, 175</value>
+  </data>
+  <data name="buttonCancel.Size" type="System.Drawing.Size, System.Drawing">
+    <value>100, 23</value>
+  </data>
+  <data name="buttonCancel.TabIndex" type="System.Int32, mscorlib">
+    <value>30</value>
+  </data>
+  <data name="buttonCancel.Text" xml:space="preserve">
+    <value>&amp;Abandon</value>
+  </data>
+  <data name="&gt;&gt;buttonCancel.Name" xml:space="preserve">
+    <value>buttonCancel</value>
+  </data>
+  <data name="&gt;&gt;buttonCancel.Type" xml:space="preserve">
+    <value>System.Windows.Forms.Button, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
+  <data name="&gt;&gt;buttonCancel.Parent" xml:space="preserve">
+    <value>$this</value>
+  </data>
+  <data name="&gt;&gt;buttonCancel.ZOrder" xml:space="preserve">
+    <value>0</value>
   </data>
   <metadata name="$this.Localizable" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>True</value>
